fixed header overflow

--- a/src/Components/header/Header.css
+++ b/src/Components/header/Header.css
@@ -11,10 +11,14 @@ p{
   padding: 0px;
 }
 
+.header-container{
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 
 nav {
   height: 2rem;
-  width: calc(100vw - 2 * var(--navPadding));
+  width: 100%;
   background-color: white;
   padding: var(--navPadding);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.229);
