--- a/src/Components/home/carousel.css
+++ b/src/Components/home/carousel.css
@@ -53,19 +53,19 @@
 }
 
 .carousel-btn {
-  width: 100vw;
+  width: 90%;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   position: absolute;
-  /* transform: translate(0, 50vh); */
+  transform: translateX(5%);
   align-self: center;
-  justify-self: center;
+  /* justify-self: center; */
 
 z-index: 999;
 }
 .carousel-btn svg {
   font-size: 2.5rem;
-  color: red;
+  color: white;
 }
 
 .carousel-curve {
